first attempt for menu, still incomplete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <title>My Times</title>
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
+
   <body>
+
+  <!-- Header -->
+
+    <header>
+      <img src="./resources/images/img-myt-logo.jpg">
+      <p>My Times</p>
+      <div class="menu">
+        <a href="#world">World</a>
+        <a href="#usa">U.S.</a>
+        <a href="#tech">Tech</a>
+        <a href="science">Science</a>
+      </div>
+    </header>
 
   </body>
 </html>
