third attempt of menu, incomplete

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 
   <!-- Header -->
 
-    <header>
-      <img src="./resources/images/img-myt-logo.jpg">
-      <p>My Times</p>
-      <div class="menu">
-        <a href="#world">World</a>
-        <a href="#usa">U.S.</a>
-        <a href="#tech">Tech</a>
-        <a href="science">Science</a>
-      </div>
-    </header>
-
-  </body>
-</html>
+  <header>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="logo mytimes">
+    <span>My Times</span>
+    <nav>
+      <ul>
+        <li>World</li>
+        <li>U.S.</li>
+        <li>Tech</li>
+        <li>Science</li>
+      </ul>
+    </nav>
