--- a/index.html
+++ b/index.html
@@ -11,13 +11,39 @@
   <!-- Header -->
 
   <header>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="logo mytimes">
-    <span>My Times</span>
-    <nav>
-      <ul>
-        <li>World</li>
-        <li>U.S.</li>
-        <li>Tech</li>
-        <li>Science</li>
-      </ul>
-    </nav>
+    <div class="logo_header">
+      <img src="./resources/images/img-myt-logo.jpg">
+      <p>My Times</p>                         <!-- Don't know how to add the extra space -->
+    </div>
+    <div class="menu">
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </div>
+  </header>
+
+    <!-- Central Body -->
+
+    <div class="main_container">
+
+    <!-- 1st Column -->
+
+      <div class="column1">
+
+      </div>
+
+    <!-- 2nd Column -->
+
+      <div class="column2">
+
+      </div>
+
+
+    <!-- 3rd Column -->
+
+      <div class="column3">
+
+      </div>
+
+    </div>
