--- a/index.html
+++ b/index.html
@@ -61,29 +61,32 @@
 
     <!-- 2nd Column -->
         <div class="column medium">
-          <div class="stories">
-            <div class="story">
-              <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-              <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-            </div>
-            <div class="img-headline4">
-              <p class="headline">Cats in Control-Is It a Thing?</p>
-            </div>
-            <div class="story">
-              <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
-            </div>
+          <div class="story">
+            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+          </div>
+          <div class="img-headline4">
+            <p class="headline">Cats in Control-Is It a Thing?</p>
+          </div>
+          <div class="story">
+            <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
           </div>
         </div>
 
     <!-- 3rd Column -->
         <div class="column small">
-          <div class="stories">
-            <div class="cookies-image">
-              <img src="./resources/images/img-news-bite.png">
-            </div>
-            <div class="story">
-              <h2>NEWS BITES</h2>
-              <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+          <div class="cookies-image">
+            <img src="./resources/images/img-news-bite.png">
+          </div>
+          <div class="story" id="newsbites">
+            <h2 id="newsbites">NEWS BITES</h2>
+            <div class="newsbites">
+              <p>Cat Emoji Goes Viral</p>
+              <p>Buy Youtube Views</p>
+              <p>Home Business Advertising Ideas</p>
+              <p>Advertising Internet Online</p>
+              <p>Illustration in Marketing Materials</p>
+              <p>Finally a Top Secret Way You Can</p>
             </div>
           </div>
         </div>
