--- a/index.html
+++ b/index.html
@@ -91,3 +91,17 @@
           </div>
         </div>
       </div>
+
+    <!-- Footer -->
+      <footer>
+        <div class="footer-first-row">
+          <span id="mytimestitle">My Times  |</span>
+          <nav>
+            <span><a href="#">World</a></span>
+            <span><a href="#">U.S.</a></span>
+            <span><a href="#">Tech</a></span>
+            <span><a href="#">Science</a></span>
+          </nav>
+        </div>
+        <p>© 2016, My Times (A Division of Codecademy bite)</p>
+      </footer>
