--- a/index.html
+++ b/index.html
@@ -1,107 +1,121 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Times</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
-  </head>
+<head>
+  <title>My Times</title>
+  <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
+</head>
+<body>
 
-  <body>
-
-  <!-- Header -->
-
+  <!-- Header Section -->
+  
   <header>
-    <div class="logo_header">
-      <img src="./resources/images/img-myt-logo.jpg">
-      <p>My Times</p>                         <!-- Don't know how to add the extra space -->
+    <div class="logo">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"> 
+      <span>My Times</span>
     </div>
     <nav>
-      <span><a href="#">World</a></span>
-      <span><a href="#">U.S.</a></span>
-      <span><a href="#">Tech</a></span>
-      <span><a href="#">Science</a></span>
+    	<span><a href="#">World</a></span>
+    	<span><a href="#">U.S.</a></span>
+    	<span><a href="#">Tech</a></span>
+    	<span><a href="#">Science</a></span>
     </nav>
   </header>
 
-    <!-- Central Body -->
+  <!-- Main Content Container --> 
 
-    <div class="content">
+  <div class="content">
 
-    <!-- 1st Column -->
+    <!-- First News Column -->
 
-      <div class="column large">
-        <div class="main-story">
-          <div class="img-headline">
-            <p class="headline" id="mainheadline">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
-          </div>
-          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+    <div class="column large">
+      <div class="lead-story">      
+        <div class="image-content">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
         </div>
+        <p class="narrative">
+          MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+        </p>
+      </div>
 
-        <div class="stories">
-          <div class="story">
+      <div class="stories">
+        <div class="story">
+          <div class="text-content">
             <h2>Orca Spends Vacation at Land World Puget</h2>
-            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</span>
+            <p class="narrative"> PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+            </p>
           </div>
-          <div class="story">
+          <div class="fall-cancelled image-content">
+            <span>Earth Spins Backwards for 2017</span>
+          </div>
+        </div>
+        
+        <div class="story">
+          <div class="text-content">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
-            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+            <p class="narrative">
+              Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+            </p>
           </div>
-        </div>
-
-        <div class="stories">
-          <div class="img-headline2">
-          <p class="headline">Earth Spins Backwards for 2017</p>
-          </div>
-          <div class="img-headline3">
-            <p class="headline">Research Shows Cameras Erase Memory</p>
+          <div class="pop-culture image-content">
+            <span>Research Shows Cameras Erase Memory</span>
           </div>
         </div>
       </div>
+    </div>
 
+    <!-- Second News Column -->
 
-    <!-- 2nd Column -->
-        <div class="column medium">
-          <div class="story">
-            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-            <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-          </div>
-          <div class="img-headline4">
-            <p class="headline">Cats in Control-Is It a Thing?</p>
-          </div>
-          <div class="story">
-            <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
-          </div>
-        </div>
-
-    <!-- 3rd Column -->
-        <div class="column small">
-          <div class="cookies-image">
-            <img src="./resources/images/img-news-bite.png">
-          </div>
-          <div class="story" id="newsbites">
-            <h2 id="newsbites">NEWS BITES</h2>
-            <div class="newsbites">
-              <p>Cat Emoji Goes Viral</p>
-              <p>Buy Youtube Views</p>
-              <p>Home Business Advertising Ideas</p>
-              <p>Advertising Internet Online</p>
-              <p>Illustration in Marketing Materials</p>
-              <p>Finally a Top Secret Way You Can</p>
-            </div>
-          </div>
+    <div class="column medium">
+      <div class="story">
+        <div class="text-content">
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p class="narrative">
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+          </p>
         </div>
       </div>
 
-    <!-- Footer -->
-      <footer>
-        <div class="footer-first-row">
-          <span id="mytimestitle">My Times  |</span>
-          <nav>
-            <span><a href="#">World</a></span>
-            <span><a href="#">U.S.</a></span>
-            <span><a href="#">Tech</a></span>
-            <span><a href="#">Science</a></span>
-          </nav>
+      <div class="story">
+        <div class="cat-ceo image-content">
+          <span>Cats in Control-Is It a Thing?</span>
         </div>
-        <p>© 2016, My Times (A Division of Codecademy bite)</p>
-      </footer>
+        <p class="narrative">
+          BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+        </p>
+      </div>
+    </div>
+
+    <!-- Third News Column -->
+
+    <div class="column small">
+      <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" />
+      <div class="news-bites">
+        <h3>NEWS BITES</h3>
+        <span class="bite">Cat Emoji Goes Viral</span>
+        <span class="bite">Buy Youtube Views</span>
+        <span class="bite">Home Business Advertising Ideas</span>
+        <span class="bite">Advertising Internet Online</span>
+        <span class="bite">Illustration in Marketing Materials</span>
+        <span class="bite">Finally a Top Secret Way You Can</span>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+
+  <footer>
+    <div class="info">
+      <span class="title">MY Times</span>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav> 
+    </div>
+    <div class="copyright">
+      © 2016, My Times (A Division of Codecademy bite)
+    </div>
+  </footer>
+</body>
+</html>
